# advent-of-code

./: .gitignore
2023/12-1-rs/: Cargo.toml
2023/12-1-rs/src/: lib.rs  main.rs
2023/12-2-rs/: Cargo.toml
2023/12-2-rs/src/: lib.rs  main.rs
2023/day-01/src/: lib.rs  main.rs
2023/day-02/src/: lib.rs  main.rs
new-advent/: Cargo.toml
new-advent/src/: main.rs
new-advent/src/file/: content.rs  operations.rs
