[package]
name = "new-advent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clipboard = "0.5.0"
crossterm = "0.27.0"
inquire = { version = "0.6.2", features = ["date"] }

[profile.release]
strip = true # Automatically strip symbols from the binary

opt-level = 3 # Optimize for size/speed

#    0: no optimizations
#    1: basic optimizations
#    2: some optimizations
#    3: all optimizations
#    "s": optimize for binary size
#    "z": optimize for binary size, but also turn off loop vectorization.

lto = true        # Enable link time optimization
debug = false     # Controls the amount of debug information
codegen-units = 1 # Maximize speed and size reduction optimization
